genx_grammar.bnf
<program> ::= <statement_list>

<statement_list> ::= <statement> | <statement> <statement_list>

<statement> ::= <print_statement> | <assignment_statement> | <conditional_statement>

<print_statement> ::= "BET" <expression>

<assignment_statement> ::= "CAP" <identifier> "=" <expression>

<conditional_statement> ::= "SUS" <comparison> "{" <statement_list> "}" "NOSUS" "{" <statement_list> "}"

<comparison> ::= <expression> ("==" | "!=" | ">" | "<" | ">=" | "<=") <expression>

<expression> ::= <term> | <term> "+" <expression> | <term> "-" <expression>

<term> ::= <factor> | <factor> "*" <term> | <factor> "/" <term>

<factor> ::= <number> | <identifier> | "(" <expression> ")"

<identifier> ::= <letter> { <letter> | <digit> }

<number> ::= <digit> { <digit> }

<letter> ::= "a" | "b" | "c" | ... | "z" | "A" | "B" | "C" | ... | "Z"

<digit> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
